--- a/.github/config.json
+++ b/.github/config.json
@@ -1,5 +1,9 @@
 {
-  "autodiscover": true,
+  "autodiscover": false,
   "autodiscoverFilter": ["micxer/*"],
+  "repositories": [
+    "micxer/repo-ops",
+    "micxer/ansible-role-docker-compose-homestack"
+  ],
   "platform": "github"
 }
