--- a/.github/workflows/lint-workflows.yml
+++ b/.github/workflows/lint-workflows.yml
@@ -1,19 +1,21 @@
 name: Lint GitHub Workflows
 
 on:
+  push:
+    paths:
+      - '.github/workflows/**'
   pull_request:
     paths:
       - '.github/workflows/**'
 
 permissions:
+  actions: read
+  contents: read
   security-events: write
-
+  
 jobs:
   lint:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout code
@@ -47,6 +49,7 @@ jobs:
         uses: github/codeql-action/init@ff0a06e83cb2de871e5a09832bc6a81e7276941f # v3
         with:
           languages: 'actions'
+          tools: linked
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@ff0a06e83cb2de871e5a09832bc6a81e7276941f # v3
