Run on additional repo

--- a/.github/config.json
+++ b/.github/config.json
@@ -3,6 +3,7 @@
   "autodiscoverFilter": ["micxer/*"],
   "repositories": [
     "micxer/repo-ops",
+    "micxer/infra",
     "micxer/ansible-role-docker-compose-homestack"
   ],
   "platform": "github"
