Set loglevel to debug

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -50,4 +50,4 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           env-regex: "^(?:RENOVATE_\\w+|LOG_LEVEL)$"
         env:
-          LOG_LEVEL: info
+          LOG_LEVEL: debug
